BGT_sprout: overlay: Set physical power button and fps location
This sets config_is_powerbutton_fps, since the device has
fps embedded in the power button. It makes frameworks report that
fingerprint sensor is located on the side of the device, which
can be observed when enrolling a fingerprint for the first time.

Change-Id: Ifa079488db642c8a470e40cb585c08e9c85d7cf4

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -226,6 +226,9 @@
          in hardware. -->
     <bool name="config_setColorTransformAccelerated">true</bool>
 
+    <!-- Indicates whether device has a power button fingerprint sensor. -->
+    <bool name="config_is_powerbutton_fps" translatable="false">true</bool>
+
     <!-- List of biometric sensors on the device, in decreasing strength. Consumed by AuthService
          when registering authenticators with BiometricService. Format must be ID:Modality:Strength,
          where: IDs are unique per device, Modality as defined in BiometricAuthenticator.java,
